--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body
-{background-color: yellow;}
+{background-color: red;}
 hr
 {background-color: red;}
 img.displayed{ position:fixed;
