--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ text-align:center;
 <body>
 <meta name="whatever" content="width=device-width, initial-scale=1.0" >
 <h1> <b> Hello !!! </b> </h1>
-<p> <b> <i> <abbr title="You are welcome to my page 🙂🙂"> Your favourite color Mona 🙂🙂   </abbr></i> </b></p>
+<p> <b> <i> <abbr title="You are welcome to my page 🙂🙂"> Favourite   </abbr></i> </b></p>
 <hr>
 <h1> <b> नमस्ते  </b> </h1>
 <i><b> <abbr title="तपाईंहरुलाई मेरो पेजमा स्वागत छ 🙂🙂"> शिलज बराल  </abbr> </b></i>
