--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <style>
 body
-{background-color: red;}
+{background-color: yellow;}
 hr
-{background-color: red;}
+{background-color: yellow;}
 img.displayed{ position:fixed;
 top:17%;
 left:30%;}
@@ -17,7 +17,7 @@ text-align:center;
 <body>
 <meta name="whatever" content="width=device-width, initial-scale=1.0" >
 <h1> <b> Hello !!! </b> </h1>
-<p> <b> <i> <abbr title="You are welcome to my page 🙂🙂"> Favourite   </abbr></i> </b></p>
+<p> <b> <i> <abbr title="You are welcome to my page 🙂🙂"> Thanks for wasting your time !!   </abbr></i> </b></p>
 <hr>
 <h1> <b> नमस्ते  </b> </h1>
 <i><b> <abbr title="तपाईंहरुलाई मेरो पेजमा स्वागत छ 🙂🙂"> शिलज बराल  </abbr> </b></i>
@@ -28,7 +28,7 @@ text-align:center;
 <br>
 <br>
 <br> 
-<p> <b>You can --> <b> <a href="mailto: shilajbaral@gmail.com"> <b> <i>mail me</i></b> </a> <b> <-- </b> <br> </p> <br> <br> <br> <br> <br> <br> <br> <br>
+<p> <b>You can --> <b> <a href=https://mail.google.com/mail/u/0/#drafts?compose=DmwnWrRlQXrjwKMhBjfGBbmvtWZTcVlxKJVjLHBmVcQCPspbqslRpkxrtxJHfcLvgswkvrFlbFRl> <b> <i>mail me</i></b> </a> <b> <-- </b> <br> </p> <br> <br> <br> <br> <br> <br> <br> <br>
 <p class=block> <b> Thanks for your time !! 
   </b>  </p>
 
