--- a/index.html
+++ b/index.html
@@ -1,35 +1,28 @@
 <!doctype html>
 <html>
 <head>
-<style>
-body
-{background-color: yellow;}
-hr
-{background-color: yellow;}
-img.displayed{ position:fixed;
-top:17%;
-left:30%;}
-p.block{
-text-align:center;
-}
-</style>
+<link rel="stylesheet" href="style.css" >
+<meta charset="utf-8">
+<meta name="description" content="This is Shilaj Baral">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="keywords" content="shilaj,hero,baral,c laj,claj">
 </head>
+<title>shilaj baral</title>
 <body>
-<meta name="whatever" content="width=device-width, initial-scale=1.0" >
-<h1> <b> Hello !!! </b> </h1>
-<p> <b> <i> <abbr title="You are welcome to my page 🙂🙂"> Thanks for wasting your time !!   </abbr></i> </b></p>
-<hr>
-<h1> <b> नमस्ते  </b> </h1>
-<i><b> <abbr title="तपाईंहरुलाई मेरो पेजमा स्वागत छ 🙂🙂"> शिलज बराल  </abbr> </b></i>
-<br>
-<br>
- <img class=displayed src=/images/underconstruction.png width=600px height=400px style="max-width=100%;height=auto;">
-<br>
-<br>
-<br>
-<br> 
-<p> <b>You can --> <b> <a href=https://mail.google.com/mail/u/0/#drafts?compose=DmwnWrRlQXrjwKMhBjfGBbmvtWZTcVlxKJVjLHBmVcQCPspbqslRpkxrtxJHfcLvgswkvrFlbFRl> <b> <i>mail me</i></b> </a> <b> <-- </b> <br> </p> <br> <br> <br> <br> <br> <br> <br> <br>
-<p class=block> <b> Thanks for your time !! 
-  </b>  </p>
-
+  <p class="fuck">
+    Namaste ! Hello ! Hola ! Bonjour !
+  </p>
+  <ul> 
+    <li> <a href="#Home"> Home  </a></li>
+    <li> <a href="#About"> About</a> </li>
+    <li><a href="#Contact"> Contact </a> </li>
+    <li class="muji"> Qui n'avance pas,recule !! </li>
+  </ul>
+  <img src="/home/claj/Git/shilaj/images/shilajdai.jpg">
+  <div> 
+  <p> <b class="Namaste"> Namaste ! </b><br>This is Shilaj Baral.You are welcome to my not so good page. I
+  have nothing much to write. I have just begun these kind <br> of things.I know you will not like it but 
+ I don't care.Thanks for visiting my site and sorry for disappointing you. <br><p class="fuck_you"> Have a nice day !!  </p> </p>
+  </div>
+</body>
 </html>
