--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="#Contact"> Contact </a> </li>
     <li class="muji"> Qui n'avance pas,recule !! </li>
   </ul>
-  <img src="/home/claj/Git/shilaj/images/underconstruction.png">
+  <img src="./images/shilajdai.jpg">
   <div> 
   <p> <b class="Namaste"> Namaste ! </b><br>This is Shilaj Baral.You are welcome to my not so good page. I
   have nothing much to write. I have just begun these kind <br> of things.I know you will not like it but 
