--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <img src="./images/shilajdai.jpg">
   <div> 
   <p> <b class="Namaste"> Namaste ! </b><br>This is Shilaj Baral.You are welcome to my not so good page. I
-  have nothing much to write. I have just begun these kind <br> of things.I know you will not like it but 
+  have nothing much to write. I have just begun these kind <br> of things.I know you are not liking it but 
  I don't care.Thanks for visiting my site and sorry for disappointing you. <br><p class="fuck_you"> Have a nice day !!  </p> </p>
   </div>
 </body>
