--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css" >
+<link rel="shortcut icon" href="./images/download.png">
 <meta charset="utf-8">
 <meta name="description" content="This is Shilaj Baral">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +14,7 @@
     Namaste ! Hello ! Hola ! Bonjour !
   </p>
   <ul> 
-    <li> <a href="#Home"> Home  </a></li>
+    <li> <a href="home.html"> Home  </a></li>
     <li> <a href="#About"> About</a> </li>
     <li><a href="#Contact"> Contact </a> </li>
     <li class="muji"> Qui n'avance pas,recule !! </li>
