--- a/Html/home.html
+++ b/Html/home.html
@@ -6,16 +6,16 @@
     </head>
     <body>
         <img id="fuck" src="../images/shilaj.jpg" alt="Shilaj Baral">
-        <!-- <div class="image"></div> -->
             <div class="text">
-                    This is Shilaj Baral.<br>
-                    I am an Electronics Engineer <br>
-                    who pursues coherence and integrity.<br>
+                This is Shilaj Baral.<br>
+                I am an Electronics Engineer <br>
+                who pursues coherence and integrity.<br>
             </div>
-       <ul class="link">
-            <li><a href="contact">Contact</a></li>
-           <li><a href="about">About</a></li>
-           <li><a href="home">Home</a></li>
-       </ul>
+        <ul>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="home">Home</a></li>
+        </ul>
+        <div class="background"></div>
     </body>
 </html>
